--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -24,18 +24,25 @@
                 <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, beatae neque.
                     Voluptatem quo corrupti dolor?</p>
                 <a href="/logout" class="button">Logout</a>
+                <br>
+                <br>
+                <form action="/upload" method="POST" enctype="multipart/form-data">
+                    <input type="text" name="caption" placeholder="Enter Caption">
+                    <input type="file" name="image">
+                    <input type="submit" value="Upload">
+                </form>
             </div>
         </div>
         <div class="container">
-            <div class="card" style="width: 18rem">
-                <img src="https://images.unsplash.com/photo-1682685797886-79020b7462a4?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-                    class="card-img-top" alt="..." />
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">
-                        Just some content
-                    </p>
+            <div class="user-cards flex">
+                <% user.posts.forEach(function(post){ %>
+                <div class="card" style="width: 18rem">
+                    <img src="/images/uploads/<%= post.image %>" class="card-img-top" alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title"> <%= post.postText %></h5>
+                    </div>
                 </div>
+                <% }) %>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
