google authentication added

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -15,14 +15,14 @@
         <div class="containerper">
             <div class="cardper">
                 <div class="profile-picture">
-                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8eW91bmclMjB3b21hbnxlbnwwfHwwfHx8MA%3D%3D"
+                    <img src="https://images.unsplash.com/photo-1541410965313-d53b3c16ef17?q=80&w=1374&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
                         alt="Profile Picture" />
                 </div>
                 <h2 class="name"><%= user.fullname %></h2>
                 <h3 class="username">@<%= user.username %></h3>
-                <p class="tagline">Lorem ipsum dolor sit amet consectetur.</p>
-                <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, beatae neque.
-                    Voluptatem quo corrupti dolor?</p>
+                <p class="tagline">Enjoy the Journey.</p>
+                <p class="description">Embarking on a journey of learning and fun by creating web clones, with endless
+                    opportunities to expand knowledge and creativity. </p>
                 <a href="/logout" class="button">Logout</a>
                 <br>
                 <br>
