--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,12 +25,9 @@
         <a href="/forgot">Forgot your password?</a>
 
         <p class="or">OR</p>
-        <button class="btn fbk">
-          <i class="fab fa-facebook fa-lg" style="color: white; padding-right: 10px"></i><a href="#">Continue with
-            Facebook</a></button><br />
         <button class="btn ggl">
-          <i class="fab fa-google" style="color: rgb(11, 241, 22); padding-right: 10px"></i><a href="#">Continue with
-            Google</a>
+          <i class="fab fa-google" style="color: rgb(11, 241, 22); padding-right: 10px"></i>
+          <a href="/login/google">Continue with Google</a>
         </button>
 
         <footer>
